# Allajnah

./: .gitignore  .replit  ComplaintsList (1).jsx  Navigation.jsx  Register.jsx  init_data.py  main.py  pyproject.toml  replit.md
attached_assets/: Pasted--vite-connecting-vite-connected-A-must-have-a-value-prop-that-is-not-an-empty-string-This-1759509208279_1759509208280.txt
complaints_backend/src/: main.py
complaints_backend/src/database/: app.db
complaints_backend/src/models/: complaint.py
complaints_backend/src/routes/: auth.py  complaint.py  subscription.py  user.py
complaints_backend/src/services/: scheduler.py
complaints_backend/src/static/: index.html
complaints_backend/tests/: test_auth_security.py
complaints_frontend/: index.html
complaints_frontend/src/: App.jsx
complaints_frontend/src/components/: Login.jsx  Navigation.jsx  PaymentPage.jsx  PaymentSettings.jsx  ProtectedRoute.jsx  Register.jsx  SubscriptionGate.jsx  UserManagement.jsx
