[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-limiter>=4.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "pytest>=8.4.2",
    "qrcode>=8.2",
    "tarsafe>=0.0.5",
    "werkzeug>=3.1.3",
    "python-magic>=0.4.27",
]
